@@ -2,8 +2,8 @@ Package: madness
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"),
     email="shabbychef@gmail.com"))
-Version: 0.2.1
-Date: 2017-04-13
+Version: 0.2.1.1000
+Date: 2017-04-24
 License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
 BugReports: https://github.com/shabbychef/madness/issues
@@ -14,6 +14,7 @@ Description: An object that supports automatic differentiation
 Depends:
     R (>= 3.2.0)
 Imports:
+    Matrix,
     matrixcalc,
     expm,
     methods
