@@ -56,9 +56,11 @@ exportMethods(vec)
 exportMethods(vech)
 exportMethods(vtag)
 exportMethods(xtag)
-import(expm)
 import(matrixcalc)
 import(methods)
+importFrom(Matrix,tril)
+importFrom(Matrix,triu)
+importFrom(expm,sqrtm)
 importFrom(methods,cbind2)
 importFrom(methods,coerce)
 importFrom(methods,kronecker)
