@@ -105,11 +105,14 @@ setMethod("maxeig", signature(x="madness"),
 	new("madness", val=val, dvdx=dvdx, vtag=vtag, xtag=xtag, varx=varx)
 }
 
+## MM: do _NOT_  setGeneric() on existing functions! (==> conflict other pkg methods!)
+# setGeneric('norm', function(x,type) standardGeneric('norm'))
+
+
 #' @name norm
 #' @rdname norm
 #' @aliases norm
 #' @exportMethod norm
-setGeneric('norm', function(x,type) standardGeneric('norm'))
 #' @rdname norm
 #' @aliases maxeig,madness-method
 setMethod("norm", signature(x="madness",type='missing'), function(x) .normit(x))
