@@ -27,6 +27,13 @@
 #' @include utils.r
 NULL
 
+## MM: do _NOT_  setGeneric() on existing functions! (==> conflict other pkg methods!)
+# setGeneric('colSums', function(x,na.rm,dims) standardGeneric('colSums'))
+# setGeneric('colMeans', function(x,na.rm=FALSE,dims=1) standardGeneric('colMeans'))
+# setGeneric('rowSums', function(x,na.rm,dims) standardGeneric('rowSums'))
+# setGeneric('rowMeans', function(x,na.rm,dims) standardGeneric('rowMeans'))
+
+
 #' @title Form Row and Column Sums and Means
 #'
 #' @description
@@ -48,7 +55,6 @@ NULL
 #' @exportMethod colSums
 #' @aliases colSums
 #' @template etc
-setGeneric('colSums', function(x,na.rm,dims) standardGeneric('colSums'))
 #' @rdname colsums
 #' @aliases colSums,madness-method
 setMethod("colSums", signature(x="madness",na.rm="ANY",dims="ANY"),
@@ -74,7 +80,6 @@ setMethod("colSums", signature(x="madness",na.rm="ANY",dims="ANY"),
 #' @rdname colsums
 #' @exportMethod colMeans
 #' @aliases colMeans
-setGeneric('colMeans', function(x,na.rm=FALSE,dims=1) standardGeneric('colMeans'))
 #' @rdname colsums
 #' @aliases colMeans,madness-method
 setMethod("colMeans", signature(x="madness",na.rm="ANY",dims="ANY"),
@@ -103,7 +108,6 @@ setMethod("colMeans", signature(x="madness",na.rm="ANY",dims="ANY"),
 #' @rdname colsums
 #' @exportMethod rowSums
 #' @aliases rowSums
-setGeneric('rowSums', function(x,na.rm,dims) standardGeneric('rowSums'))
 #' @rdname colsums
 #' @aliases rowSums,madness-method
 setMethod("rowSums", signature(x="madness",na.rm="ANY",dims="ANY"),
@@ -130,7 +134,6 @@ setMethod("rowSums", signature(x="madness",na.rm="ANY",dims="ANY"),
 #' @rdname colsums
 #' @exportMethod rowMeans
 #' @aliases rowMeans
-setGeneric('rowMeans', function(x,na.rm,dims) standardGeneric('rowMeans'))
 #' @rdname colsums
 #' @aliases rowMeans,madness-method
 setMethod("rowMeans", signature(x="madness",na.rm="ANY",dims="ANY"),
