@@ -5,7 +5,6 @@
 \alias{colMeans}
 \alias{colMeans,madness-method}
 \alias{colSums}
-\alias{colSums,madness-method}
 \alias{colsums}
 \alias{rowMeans}
 \alias{rowMeans,madness-method}
@@ -13,19 +12,11 @@
 \alias{rowSums,madness-method}
 \title{Form Row and Column Sums and Means}
 \usage{
-colSums(x, na.rm = FALSE, dims = 1, ...)
-
 \S4method{colSums}{madness}(x, na.rm = FALSE, dims = 1)
-
-colMeans(x, na.rm = FALSE, dims = 1, ...)
 
 \S4method{colMeans}{madness}(x, na.rm = FALSE, dims = 1)
 
-rowSums(x, na.rm = FALSE, dims = 1, ...)
-
 \S4method{rowSums}{madness}(x, na.rm = FALSE, dims = 1)
-
-rowMeans(x, na.rm = FALSE, dims = 1, ...)
 
 \S4method{rowMeans}{madness}(x, na.rm = FALSE, dims = 1)
 }
