@@ -6,11 +6,8 @@
 \alias{chol.madness}
 \alias{matwise}
 \alias{sqrtm}
-\alias{sqrtm,madness-method}
 \title{Matrix-wise Multivariate Operations}
 \usage{
-sqrtm(x)
-
 \S4method{sqrtm}{madness}(x)
 
 \method{chol}{madness}(x, ...)
